2002-03-07  Ravi Pratap  <ravi@ximian.com>

	* test-82.cs : Add.

2002-03-07  Miguel de Icaza  <miguel@ximian.com>

	* test-52.cs: Expanded test to cover more cases of foreach.

2002-03-05  Ravi Pratap  <ravi@ximian.com>

	* test-81.cs : Add. 

	* makefile : Update accordingly as this test passes.

2002-02-20  Miguel de Icaza  <miguel@ximian.com>

	* unsafe-1.cs: Extend test.

2002-01-18  Miguel de Icaza  <miguel@ximian.com>

	* test-7.cs: Fix test (i.i wsa invalid)

2002-01-18  Nick Drochak  <ndrochak@gol.com>

	* makefile: remove path to beta2 csc.exe.  path to csc.exe must be in PATH instead.

2002-01-13  Ravi Pratap  <ravi@ximian.com>

	* test-58.cs : Since it was a duplicate, replace with unsafe
	code testing.

2002-01-08  Miguel de Icaza  <miguel@ximian.com>

	* test-34.cs: Improve this test to check ref/ref cases.

2002-01-02  Ravi Pratap  <ravi@ximian.com>

	* test-45.cs : Augment to exercise support for array initialization
	for various other types.

2001-12-30  Miguel de Icaza  <miguel@ximian.com>

	* test-67.cs: Improve this test.

2001-12-29  Ravi Pratap  <ravi@ximian.com>

	* test-69.cs : Add. This tests support for methods which are
	internal calls.

2001-12-28  Ravi Pratap  <ravi@ximian.com>

	* test-34.cs : Update to exercise the new overload resolution
	code.

2001-12-26  Ravi Pratap  <ravi@ximian.com>

	* test-67.cs : Add. These are tests for explicit layout
	of structs and classes.

	* makefile : Update accordingly.
	
2001-12-25  Ravi Pratap  <ravi@ximian.com>

	* test-57.cs : Update to exercise more of the code base for
	events.

2001-12-24  Ravi Pratap  <ravi@ximian.com>

	* test-19.cs : Augment to exercise tests on delegates
	defined in mscorlib.

	* test-57.cs : Update to exercise the -= operator
	as well.
	
2001-12-23  Ravi Pratap  <ravi@ximian.com>

	* test-57.cs : Update.

	* makefile : Update to include the above as it passes nicely.

2001-12-21  Ravi Pratap  <ravi@ximian.com>

	* test-19.cs : Augment to exercise code which fixed the bug